--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <div class="logo">Header Logo</div>
           <nav class="nav-bar">
             <ul class="nav-links">
-              <li><a href="#">header link one</a></li>
-              <li><a href="#">header link two</a></li>
-              <li><a href="#">header link three</a></li>
+              <li><a href="#info">header link one</a></li>
+              <li><a href="#quote">header link two</a></li>
+              <li><a href="#action">header link three</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -44,7 +44,7 @@
     </section>
 
     <!-- next section--> 
-    <section class="info">
+    <section id="info">
         <h1>Some random information.</h1>
         <div class="container">
             <div class="boxes">
@@ -65,7 +65,7 @@
             </div>
     </section>  
 
-    <section class="quote">
+    <section id="quote">
         <div class="inner-quote">
         <blockquote>
             This is an aspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
@@ -74,7 +74,7 @@
     </div>
     </section>
 
-    <section class="action">
+    <section id="action">
         <div class="action-inner">
             <div class="inner-left">
             <h1>Call to action! It's time!</h1>
